--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,5 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-insta = "1.29.0"
 leptess = "0.14.0"
-serde = { version = "1.0.160", features = ["derive"] }
-serde_json = "1.0.96"
+deno_bindgen = "0.8.0"
